Archive/e4daef60711b52eb54907c8dcb11f570-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:43: error: converting to ‘boost::flyweights::flyweight<std::basic_string<char> >’ from initializer list would use explicit constructor ‘boost::flyweights::flyweight<T, Arg1, Arg2, Arg3, Arg4, Arg5>::flyweight(const T0&) [with T0 = char [6]; T = std::basic_string<char>; Arg1 = boost::parameter::void_; Arg2 = boost::parameter::void_; Arg3 = boost::parameter::void_; Arg4 = boost::parameter::void_; Arg5 = boost::parameter::void_]’
   boost::flyweight<std::string> f={"hello"};
                                           ^
